@@ -1,185 +1,50 @@
-# 2020年最新-IDEA最详细配置（配图文收藏版配置) 转载
-
-
-# IDEA使用设置
-
-继续`idea`最新安装的步骤后，对`IDEA`工作开发进行配置，让开发的时候更加便利顺手。
-
-点击欢迎页右下角"`Configure`"，选择"`Settings`"，进入全局设置界面。
-
-注意：`IDEA`有全局配置和项目配置两种设置，在欢迎页进行的`Settings`是对全局配置进行设置。而在项目中`setting`有可能为当前项目
-
-
-
-## 一、 全局JDK设置（默认配置）
-
-1. 设置在：“`Configure`“下的“`Structure` `for New Projects`”
-![第一步](/images/idea/idea-1608616494121.png)
-
-
-2. 选择安装路径进行配置
-![第二步](/images/idea/idea-1608616568688.png)
-
-
-
-## 二、主题设置
-
-> 步骤前先点击setting:进入全局配置：
-
-
-### 进入全局配置
-设置在：“`File | Settings | Appearance & Behavior | Appearance`“”
-![主题设置](/images/idea/idea-1608616647125.png)
-
-
-## 三、字体大小设置
-
-1. 非代码窗口设置`UI`样式和字体
-
-设置在：“`File | Settings | Appearance & Behavior | Appearance`”中
-![窗口字体](/images/idea/idea-1608616678269.png)
-
-
-
-2. 代码窗口字体
-
-设置在："`Editor`"的"`Font`"中，分别设置编辑器字体、字号、行间距
-![代码字体](/images/idea/idea-1608616702277.png)
-
-
-3. 设置控制台字体
-
-控制台字体和编辑器字体设置一个逻辑，设置在："`Editor`"下"`Color Scheme`"的"`Console Font`"里。
-![设置控制台字体](/images/idea/idea-1608616738597.png)
-
-
-
-## 四、字符集和配置文件编码格式设置
-
-设置在：“`File | Settings | Editor | File Encodings`“
-![字符集和配置文件编码格式设置](/images/idea/idea-1608616758970.png)
-
-
-## 五、自动导入设置
-
-设置在：“`File | Settings | Editor | General | Auto Import`”
-
-![自动导入设置](/images/idea/idea-1608616782298.png)
-
-
-## 六、自动忽视大小写设置
-
-设置在：“`File | Settings | Editor | General | Code Completion`”
-![忽视大小写设置](/images/idea/idea-1608616814428.png)
-
-
-
-## 七、关闭自动更新设置以及每次打开项目为最后关闭项目
-
-1. 关闭自动更新
-
-设置在：
-
-“`File | Settings | Appearance & Behavior | System Settings | Updates`”
-![关闭自动更新](/images/idea/idea-1608616832724.png)
-
-
-2.关闭打开项目为最后关闭项目
-
-设置在：
-
-“`File | Settings | Appearance & Behavior | System Settings`”
-![关闭打开项目为最后关闭项目](/images/idea/idea-1608616848994.png)
-
-
-
-## 八、Tab页多行显示设置
-
-设置在：“`File | Settings | Editor | General | Editor Tabs`”
-![Tab页多行显示设置](/images/idea/idea-1608616885599.png)
-
-
-
-## 九、滚轴修改字体大小设置以及代码悬浮提示
-
-设置在：“`File | Settings | Editor | General`”
-![滚轴修改字体大小设置以及代码悬浮提示](/images/idea/idea-1608616900142.png)
-
-
-
-## 十、显示方法之间的分割线
-
-设置在：
-
-“`File | Settings | Editor | General | Appearance`”
-
-![显示方法之间的分割线](/images/idea/idea-1608616920627.png)
-
-
-## 十一、注释格式
-
-1. `Java`注释优化代码注释前空格格式
-
-设置在：
-
-“`File | Settings | Editor | Code Style | Java`”
-![Java注释优化代码注释前空格格式 ](/images/idea/idea-1608616935562.png)
-
-
-
-2. `html\xml` 注释优化代码注释前空格格式
-
-设置在：
-
-“`File | Settings | Editor | Code Style | html/xml`”
-![html\xml 注释优化代码注释前空格格式](/images/idea/idea-1608616972147.png)
-
-
-
-## 十二、开启代码自动编译
-
-设置在：
-
-”`File/Settings/Build,Execution,Deployment/Compiler`“
-![开启代码自动编译](/images/idea/idea-1608616990093.png)
-
-
-
-## 十三、2.2. 快捷键配置(`File/Settings/Keymap`)
-
-设置在：”`File | Settings | Keymap`“
-![快捷键配置](/images/idea/idea-1608617009734.png)
-
-
-
-## “十四、去除`idea`自带的`.iml`文件，以及`.idea`文件夹”
-
-设置在：
-
-”`File | Settings | Editor | File Types`“
-![去除idea自带的.iml文件，以及.idea文件夹](/images/idea/idea-1608617031528.png)
-
-
-
-## 十五、`IDEA`中`Maven`配置
-
-设置在：
-
-“`File | Settings | Build, Execution, Deployment | Build Tools | Maven`”
-![maven配置](/images/idea/idea-1608617058125.png)
-
-
-
-## 十六、IDEA中代码检测警告提示等级设置
-![警告](/images/idea/idea-1608617070346.png)
-
-
-
-## 十七、包展开设置
-![包展开设置](/images/idea/idea-1608617079931.png)
-
-
-# 转载 > [你的学习书单](https://www.bilibili.com/read/cv5707434/)
-
-
+# IDEA 卡成球了 ！咋优化 ?
+
+
+# 默认设置
+
+```
+-Xms128m
+-Xmx750m
+-XX:MaxPermSize=350m
+-XX:ReservedCodeCacheSize=240m
+-XX:+UseCompressedOops
+```
+# 设置为大内存  `Big`
+```
+-Xms1024m
+-Xmx4096m
+-XX:ReservedCodeCacheSize=1024m
+-XX:+UseCompressedOops
+```
+# 平衡模式  `Balanced`
+```
+-Xms2g
+-Xmx2g
+-XX:ReservedCodeCacheSize=1024m
+-XX:+UseCompressedOops
+```
+# 复杂配置  `Sophisticated`
+```
+-server
+-Xms2g
+-Xmx2g
+-XX:NewRatio=3
+-Xss16m
+-XX:+UseConcMarkSweepGC
+-XX:+CMSParallelRemarkEnabled
+-XX:ConcGCThreads=4
+-XX:ReservedCodeCacheSize=240m
+-XX:+AlwaysPreTouch
+-XX:+TieredCompilation
+-XX:+UseCompressedOops
+-XX:SoftRefLRUPolicyMSPerMB=50
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-Djsse.enableSNIExtension=false
+-ea
+```
+
+三者之间的差异不大，但是 `Big` 配置下的
+`Full GC` 执行时间最快。此外， `Xmx` 内存大些对响应能力提升的帮助非常明显。
 
